--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "satdata"
+name = "earth-explorer"
 version = "0.1.0"
-description = ""
+description = "A library to simplify the workflow of data acquisition from multiple satellite data providers"
 authors = ["Evan Thomas <evan.thomas@epfl.ch>"]
 readme = "README.md"
 
