--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,9 @@ readme = "README.md"
 python = "^3.9"
 botocore = "1.29.133"
 eodag = "^2.10.0"
-eodag-sentinelsat = "^0.4.1"
 typer = "^0.9.0"
 rich = "^13.3.5"
-
+pydantic = "^1.10.9"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.3.0"
