--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ eodag = "^2.10.0"
 typer = "^0.9.0"
 rich = "^13.3.5"
 pydantic = "^1.10.9"
+openeo = "^0.18.0"
+jupyterlab = "^4.0.2"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.3.0"
