--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,14 @@ botocore = "1.29.133"
 eodag = "^2.10.0"
 typer = "^0.9.0"
 rich = "^13.3.5"
-pydantic = "^1.10.9"
+pydantic = {extras = ["dotenv"], version = "^1.10.9"}
 openeo = "^0.18.0"
 jupyterlab = "^4.0.2"
+sentinelsat = "^1.2.1"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.3.0"
+pytest-watch = "^4.2.0"
 
 [build-system]
 requires = ["poetry-core"]
