--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pydantic = {extras = ["dotenv"], version = "^1.10.9"}
 openeo = "^0.18.0"
 jupyterlab = "^4.0.2"
 sentinelsat = "^1.2.1"
+asf-search = "^6.5.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.3.0"
