--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,9 @@ description = "A library to simplify the workflow of data acquisition from multi
 authors = ["Evan Thomas <evan.thomas@epfl.ch>"]
 readme = "README.md"
 
+[tool.poetry.scripts]
+earth-extractor = 'earth_extractor.app:main'
+
 [tool.poetry.dependencies]
 python = "^3.9"
 botocore = "1.29.133"
@@ -13,13 +16,13 @@ typer = "^0.9.0"
 rich = "^13.3.5"
 pydantic = {extras = ["dotenv"], version = "^1.10.9"}
 openeo = "^0.18.0"
-jupyterlab = "^4.0.2"
 sentinelsat = "^1.2.1"
 asf-search = "^6.5.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.3.0"
 pytest-watch = "^4.2.0"
+jupyterlab = "^4.0.2"
 
 [build-system]
 requires = ["poetry-core"]
