--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pydantic = {extras = ["dotenv"], version = "^1.10.9"}
 openeo = "^0.18.0"
 sentinelsat = "^1.2.1"
 asf-search = "^6.5.0"
+sentinelhub = "^3.9.1"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.3.0"
