--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ openeo = "^0.18.0"
 sentinelsat = "^1.2.1"
 asf-search = "^6.5.0"
 sentinelhub = "^3.9.1"
+keyring = "^24.2.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.3.0"
