--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ sentinelsat = "^1.2.1"
 asf-search = "^6.5.0"
 sentinelhub = "^3.9.1"
 keyring = "^24.2.0"
+shapely = "^2.0.1"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.3.0"
