--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ asf-search = "^6.5.0"
 sentinelhub = "^3.9.1"
 keyring = "^24.2.0"
 shapely = "^2.0.1"
+ascii-art = "^0.1.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.3.0"
