--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ sentinelhub = "^3.9.1"
 keyring = "^24.2.0"
 shapely = "^2.0.1"
 ascii-art = "^0.1.0"
+tenacity = "^8.2.2"
+geopandas = "^0.13.2"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.3.0"
