--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ geopandas = "^0.13.2"
 mypy = "^1.3.0"
 pytest-watch = "^4.2.0"
 jupyterlab = "^4.0.2"
+pytest-mock = "^3.11.1"
+pytest-cov = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core"]
