Add the resources pytest needs -- covered by gitignore

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -24,4 +24,4 @@ jobs:
     - name: Run pytest with coverage
       env:
         PYTHON_KEYRING_BACKEND: keyring.backends.null.Keyring
-      run: poetry run pytest --cov=earth_extractor --cov-report term-missing --rootdir /home/runner/work/earth-extractor
+      run: poetry run pytest --cov=earth_extractor --cov-report term-missing
