--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ shapely = "^2.0.1"
 ascii-art = "^0.1.0"
 tenacity = "^8.2.2"
 geopandas = "^0.13.2"
+python-cmr = "^0.8.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.3.0"
