--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,3 +34,6 @@ pytest-cov = "^4.1.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+addopts = "--cov --cov-report=lcov --cov-report=term"
