--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ tenacity = "^8.2.2"
 geopandas = "^0.13.2"
 pystac-client = "^0.7.2"
 aiohttp = "^3.8.5"
+types-requests = "^2.31.0.2"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.3.0"
