--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ geopandas = "^0.13.2"
 pystac-client = "^0.7.2"
 aiohttp = "^3.8.5"
 types-requests = "^2.31.0.2"
+pyjwt = "^2.8.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.3.0"
