--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pystac-client = "^0.7.2"
 aiohttp = "^3.8.5"
 types-requests = "^2.31.0.2"
 pyjwt = "^2.8.0"
+orjson = "^3.9.2"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.3.0"
