--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ pytest-cov = "^4.1.0"
 black = "^23.7.0"
 pytest-watcher = "^0.3.4"
 autoflake = "^2.2.0"
+requests-mock = "^1.11.0"
 
 [build-system]
 requires = ["poetry-core"]
