--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,4 +44,4 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
 addopts = "--cov --cov-report term-missing"
-
+env = ["PYTHON_KEYRING_BACKEND = keyring.backends.null.Keyring"]
