--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ aiohttp = "^3.8.5"
 types-requests = "^2.31.0.2"
 pyjwt = "^2.8.0"
 orjson = "^3.9.5"
+pyodata = "^1.11.1"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.3.0"
