--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "earth-extractor"
-version = "0.1.4"
+version = "0.2.0"
 description = "A library to simplify the workflow of data acquisition from multiple satellite data providers"
 authors = ["Evan Thomas <evan.thomas@epfl.ch>"]
 readme = "README.md"
@@ -14,10 +14,6 @@ botocore = "1.29.133"
 typer = "^0.9.0"
 rich = "^13.3.5"
 pydantic = { extras = ["dotenv"], version = "^1.10.9" }
-openeo = "^0.18.0"
-sentinelsat = "^1.2.1"
-asf-search = "^6.5.0"
-sentinelhub = "^3.9.1"
 keyring = "^24.2.0"
 shapely = "^2.0.1"
 tenacity = "^8.2.2"
@@ -27,7 +23,8 @@ aiohttp = "^3.8.5"
 types-requests = "^2.31.0.2"
 pyjwt = "^2.8.0"
 orjson = "^3.9.5"
-pyodata = "^1.11.1"
+tqdm = "^4.66.1"
+geojson = "^3.1.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.3.0"
