--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pyjwt = "^2.8.0"
 orjson = "^3.9.5"
 tqdm = "^4.66.1"
 geojson = "^3.1.0"
+asf-search = "^7.0.4"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.3.0"
